# gitops

./: .gitignore  .swp  .vimrc  AUTHORS  CONTRIBUTING.md  Makefile  README.md  actmp.4_nXItezWn  configure  configure.1  configure.ac  configure.ac-autoconf.m4  configure.ac-automake.m4  configure.ac-cicd.m4  configure.ac-exec.m4  configure.ac-framework.m4  configure.ac-git.m4  configure.ac-gitops-audit.m4  configure.ac-gitops.m4  configure.ac-makefile.m4  configure.help  make-targets.txt  make.1  make.help  make.sh  man  man.1  man.help  man.sh  proto-env.txt
lib/: cicd.sh  file.1  file.sh  framework.sh  list.1  list.sh  makefile.sh  semver.sh  workflow.sh  yaml.sh
libexec/cicd/: apply.sh  args.sh  detect.sh  vars.sh
libexec/file/: check.sh
libexec/framework/: apply.sh  init.sh
libexec/helper/: git-submodule-path.sh
libexec/makefile/: check-targets.sh
sbin/: git-semver-helper  git-semver-helper.sh  git-semver-helper.sh~
srv/cicd/bitbucket-pipelines/: detect.sh
srv/cicd/bitbucket-pipelines/gitflow/: apply.sh  bitbucket-pipelines.yml
srv/cicd/github-actions/: detect.sh  vars.txt
srv/cicd/gitlab-cicd/: detect.sh
srv/cicd/gitlab-cicd/gitflow/: bitbucket-pipelines.yml
srv/cicd/jenkins/: detect.sh
srv/framework/: typescript.init.sh
srv/framework/generic/: Makefile  README.txt  configure.ac
srv/framework/typescript/: .gitignore  Makefile  configure.ac  jest.config.js  package.json  tsconfig.debug.json  tsconfig.json
test-reports/: configure.ac-autoconf.m4.test.sh.xml  configure.ac-automake.m4.test.sh.xml  configure.ac-cicd.m4.test.sh.xml  configure.ac-exec.m4.test.sh.xml  configure.ac-framework.m4.test.sh.xml  configure.ac-git.m4.test.sh.xml  configure.ac-gitops-audit.m4.test.sh.xml  configure.ac-gitops.m4.test.sh.xml  configure.ac-makefile.m4.test.sh.xml  configure.ac.test.sh.xml
test-reports/lib/cicd/framework/: framework__apply.test.sh.xml  framework__list.test.sh.xml
test-reports/lib/file/: file__filter.test.sh.xml  file__gglob.test.sh.xml  file__gglobs.test.sh.xml  file__glob.test.sh.xml  file__globs.test.sh.xml  file__indir.test.sh.xml
test-reports/lib/framework/: framework__is.test.sh.xml
test-reports/lib/list/: list__slice.test.sh.xml
